// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox Complete 1`] = `
<div
  className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
  id="checkbox"
>
  ✓
</div>
`;

exports[`Storyshots Checkbox Incomplete 1`] = `
<div
  className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
  id="checkbox"
>
  
</div>
`;

exports[`Storyshots Todo Complete 1`] = `
<div
  className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
>
  <div
    className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
  >
    ✓
  </div>
  <div
    className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
  >
    Test Task
  </div>
  <div
    className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
  >
    User's Name
  </div>
</div>
`;

exports[`Storyshots Todo Incomplete 1`] = `
<div
  className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
>
  <div
    className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
  >
    
  </div>
  <div
    className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
  >
    Test Task
  </div>
  <div
    className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
  >
    User's Name
  </div>
</div>
`;

exports[`Storyshots TodoList A Few Todos 1`] = `
<div
  className="bg-palette1-xiketic h-screen overflow-y-scroll"
>
  <div
    className="p-4"
  >
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        ✓
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TodoList Many Todos 1`] = `
<div
  className="bg-palette1-xiketic h-screen overflow-y-scroll"
>
  <div
    className="p-4"
  >
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        ✓
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        ✓
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        ✓
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        ✓
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        ✓
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        ✓
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        ✓
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TodoList Single Todo 1`] = `
<div
  className="bg-palette1-xiketic h-screen overflow-y-scroll"
>
  <div
    className="p-4"
  >
    <div
      className="bg-palette1-darkJungleGreen h-16 border-0 border-palette1-darkSalmon grid mb-3 rounded-bl-full items-center justify-start rounded-r-full pl-2 grid-rows-2 grid-cols-24"
    >
      <div
        className="relative rounded-full flex justify-center items-center bg-palette1-glaucous h-8 w-8 mr-2 row-span-2 col-span-1"
      >
        
      </div>
      <div
        className="row-span-1 col-start-2 pl-1 font-hairline text-xl text-white"
      >
        Basic Task
      </div>
      <div
        className="row-start-2 row-span-1 col-start-2 pl-1 font-hairline text-xs text-white"
      >
        Sondra
      </div>
    </div>
  </div>
</div>
`;
